<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDE0BF"
    tools:context=".Calender.view.calenderFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/calender_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="35">

            <TextView
                android:id="@+id/txt_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@string/Saturday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold"
               />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
             />

            <TextView
                android:id="@+id/txt_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sunday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Monday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tuesday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Wednesday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_thuresday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Thursday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/thuresday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Friday"
                android:textAlignment="center"
                android:textColor="#231E1E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="4" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>