<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">


    <Button
        android:id="@+id/btn_allmeals"
        android:layout_width="354dp"
        android:layout_height="67dp"
        android:layout_marginTop="212dp"
        android:backgroundTint="#FABB75"
        android:drawableLeft="@drawable/burger1"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/Search_by_meal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_area"
        android:layout_width="354dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/secondBase"
        android:drawableLeft="@drawable/world"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/search_by_area"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ingradiant"
        app:layout_constraintStart_toStartOf="@+id/btn_ingradiant"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingradiant" />

    <Button
        android:id="@+id/btn_ingradiant"
        android:layout_width="354dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/secondBase"
        android:drawableLeft="@drawable/ingredients"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/Search_by_ingredient"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_allmeals"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_allmeals"
        app:layout_constraintTop_toBottomOf="@+id/btn_allmeals" />

    <Button
        android:id="@+id/btn_gategory"
        android:layout_width="354dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/secondBase"
        android:drawableLeft="@drawable/pyramid"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:text="@string/search_by_category"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_area"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_area"
        app:layout_constraintTop_toBottomOf="@+id/btn_area" />

</androidx.constraintlayout.widget.ConstraintLayout>